fix overflow-x; Include font correctly

--- a/wp/themes/claufolio/style.scss
+++ b/wp/themes/claufolio/style.scss
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Ogg';
-  src: font_url('./assets/fonts/Ogg-Roman.otf') format('opentype'),
+  src: font_url('localhost:8000/wp-content/themes/claufolio/assets/fonts/Ogg-Roman.otf') format('opentype'),
 }
 
 $primary: white;
@@ -79,6 +79,7 @@ html.has-scroll-smooth {
 .scroll-container {
   perspective: 1px;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .cursor {
